--- a/final-project-fe/Pages/Mentor/MentorPage/EditCourse.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/EditCourse.cshtml
@@ -3168,7 +3168,7 @@
                 event.stopPropagation();
             }
 
-            const formatInfo = document.getElementById('excel-format-info');
+            const formatInfo = document.getElementById(`excel-format-info`);
             formatInfo.style.display = formatInfo.style.display === 'none' ? 'block' : 'none';
         }
 
