--- a/final-project-fe/Pages/Mentor/Shared/_MentorLayout.cshtml
+++ b/final-project-fe/Pages/Mentor/Shared/_MentorLayout.cshtml
@@ -56,12 +56,11 @@
 
 			<div class="top-area">
 				<ul class="main-menu">
-
 					<li>
 						<a href="#" title="">Home</a>
 						<ul>
 							<li>
-								<a class="nav-link text-dark" asp-area="" asp-page="/Index">Forum Page</a>
+								<a class="nav-link text-dark" asp-area="" asp-page="/Index">Communication Page</a>
 							</li>
 							<li>
 								<a class="nav-link text-dark" asp-page="/Mentor/MentorPage/Index">Course Page</a>
