--- a/final-project-fe/Pages/Mentor/MentorPage/RequestWithdrawal.cshtml
+++ b/final-project-fe/Pages/Mentor/MentorPage/RequestWithdrawal.cshtml
@@ -464,7 +464,7 @@
             const amount = points * 1000;
             
             if (points > 0) {
-                document.getElementById('amount').value = formatNumber(amount) + '₫';
+                document.getElementById('amount').value = formatNumber(amount) + 'VNĐ';
             } else {
                 document.getElementById('amount').value = '';
             }
