--- a/final-project-fe/Pages/Admin/ReportManager/PostsReport/Index.cshtml
+++ b/final-project-fe/Pages/Admin/ReportManager/PostsReport/Index.cshtml
@@ -116,7 +116,7 @@
                         <!-- Action buttons -->
                         <div class="mt-3 pt-3 border-top">
                             <div class="d-flex justify-content-end gap-2">
-                                <form method="post" asp-page-handler="DeleteReport" class="d-inline">
+                                <form method="post" asp-page-handler="Warning" class="d-inline">
                                     <input type="hidden" name="id" value="@post?.UserId" />
                                     <input type="hidden" name="title" value="@post?.Title" />
                                     <button class="btn btn-sm btn-warning"
