Add Page PurchaseHistory & TransactionHistory

--- a/final-project-fe/Pages/Admin/Shared/_AdminLayout.cshtml
+++ b/final-project-fe/Pages/Admin/Shared/_AdminLayout.cshtml
@@ -193,7 +193,7 @@
                                 <ul class="nav nav-collapse">
                                     <li class="@(ViewData["ActivePage"] as string == "CourseManager.ListConrse" ? "active" : "")">
                                         <a asp-page="/Admin/CourseManager/Index">
-                                            <span class="sub-item">List Conrse</span>
+                                            <span class="sub-item">List Course</span>
                                         </a>
                                     </li>
                                     <li class="@(ViewData["ActivePage"] as string == "CourseManager.ListPending" ? "active" : "")">
