--- a/final-project-fe/Pages/Admin/TransactionManager/Payment.cshtml
+++ b/final-project-fe/Pages/Admin/TransactionManager/Payment.cshtml
@@ -214,8 +214,8 @@
                                 <a class="dropdown-item d-flex align-items-center gap-2" href="#" onclick="filterPaymentsByServiceType('Course')">
                                     <i class="fas fa-book text-primary"></i>Course
                                 </a>
-                                <a class="dropdown-item d-flex align-items-center gap-2" href="#" onclick="filterPaymentsByServiceType('Membership')">
-                                    <i class="fas fa-id-card text-success"></i>Membership
+                                <a class="dropdown-item d-flex align-items-center gap-2" href="#" onclick="filterPaymentsByServiceType('Premium')">
+                                    <i class="fas fa-id-card text-success"></i>Premium
                                 </a>
                             </div>
                         </div>
