--- a/final-project-fe/Pages/Shared/_Layout.cshtml
+++ b/final-project-fe/Pages/Shared/_Layout.cshtml
@@ -87,6 +87,12 @@
 							<li>
 								<a class="nav-link text-dark" asp-area="" asp-page="/PointTransaction">Buy Point</a>
 							</li>
+							<li>
+								<a class="nav-link text-dark" asp-area="" asp-page="/PurchaseHistory">Purchase History</a>
+							</li>
+							<li>
+								<a class="nav-link text-dark" asp-area="" asp-page="/TransactionHistory">Transaction History</a>
+							</li>
 							@* <li>
 								<a class="nav-link text-dark" asp-area="" asp-page="/ErrorPage">404</a>
 							</li> *@
