Attendance DoAssignment +WorkShop
Attendance,DoAssignment and WorkShop

--- a/final-project-fe/Pages/GenerateCertificate.cshtml
+++ b/final-project-fe/Pages/GenerateCertificate.cshtml
@@ -22,7 +22,7 @@
         </div>
     </div>
 </div>
-
+<button type="button" onclick="downloadCertificate()">📄 Download Certificate</button>
 <style>
     #certificate {
         width: 1123px;
