--- a/final-project-fe/Pages/Login.cshtml
+++ b/final-project-fe/Pages/Login.cshtml
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
+
+    @Html.Partial("_Notification")
     <div class="theme-layout">
         <div class="container-fluid pdng0">
             <div class="row merged">
